add full documentation
