# app/Http/Controllers/CategoryController.php
@@ -5,6 +5,23 @@ namespace App\Http\Controllers;
 use App\Models\Category;
 use Illuminate\Http\Request;
 
+/**
+* @OA\Get(
+*   path = "/api/categories",
+*   summary = "Get 10 popular category",
+*   tags = {"Registration"},
+*   @OA\Response(
+*       response=200,
+*       description="Success",
+*       @OA\JsonContent(
+*           type="array",
+*           description="List of 10 categories",
+*           @OA\Items( ref="#/components/schemas/Category" ),
+*       )
+*   ),
+* )
+*/
+
 class CategoryController extends Controller
 {
     public function index() {
